--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8">
         <title>FieldsOS</title>
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-        <script src="http://unpkg.com/tone"></script>
-        <link rel="stylesheet" href="fieldsos.css">
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/tone/14.8.48/Tone.js"></script>
+        <link rel="stylesheet" href="fieldsos.css?v=4">
     </head>
 
     <body>
@@ -78,9 +78,9 @@
             </div>
         </div>
 
-        <script type="text/javascript" src="util.js"></script>
-        <script type="text/javascript" src="patches.js"></script>
-        <script type="text/javascript" src="algos.js"></script>
+        <script type="text/javascript" src="util.js?v=3"></script>
+        <script type="text/javascript" src="patches.js?v=3"></script>
+        <script type="text/javascript" src="algos.js?v=3"></script>
         <script type="text/javascript">
 
             // ------------------------------------------------
