Added version number.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <body>
 
         <div class="container">
-            <b>FieldsOS</b>
+            <b>FieldsOS</b> v0.2
             <div class="buttonContainer">
                 <button id="b" class="controlButton" onClick="go();">&gt;</button>
                 <button id="regenButton" class="controlButton" onClick="regen();">?</button>
