Added pitch decay parameter.

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
                     { name: "decay",        label:"DECAY",      min: 1,     max: 100,   default: 50,        },
                     { name: "frequency",    label:"FREQ",       min: 20,    max: 1000,  default: 500,       },
                     { name: "octaves",      label:"FREQDROP",   min: 0,     max: 8,     default: 2,         },
+                    { name: "pitchDecay",   label:"DROPTIME",   min: 0,     max: 100,   default: 25,       },
                 ];
     
                 for (var i=0; i<sliders.length; i++)
